Fixed spacing above cocktail-image-and-recipe, alignment of cocktail-image-col. Added media query for aforementioned spacing and flex-direction: column reverse so the recipe box appears before the cocktail-result-image

--- a/css/main.css
+++ b/css/main.css
@@ -197,6 +197,10 @@ nav .block .navbar-default {
 nav .block .navbar-default .navbar-brand {
   padding-left: 0px;
 }
+/* nav .block .navbar-default .navbar-collapse {
+  background-color: rgba(255, 255, 255, 0.6);
+  background-color: rgba(255, 178, 178, 0.89);
+} */
 nav .block .navbar-default .navbar-nav {
   padding-top: 10px;
 }
@@ -427,7 +431,11 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
   }
 }
 .cocktail-image-col {
-  padding: 30px;
+  padding-left: 30px;
+  padding-right: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 #cocktail-picker-block .cocktail-picker-image {
   display: flex;
